# bare-metal-manager-core

./: .protolint.yaml  .taplo.toml  Cargo.toml  Cross.toml  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: copy-pr-bot.yaml
.github/workflows/: ci.yaml  promotion.yaml  release.yaml  sync-openapi.yml
bluefield/otel/: otel-agent-config.toml  otel_config.yaml
book/: book.toml
book/src/architecture/: health_aggregation.md  overview.md
book/src/development/: vm_pxe_client.md
book/src/manuals/: machine_validation.md  sku_validation.md
book/src/playbooks/: force_delete.md  ib_runbook.md  troubleshooting_noDpuLogsWarning_alerts.md
common/mlxconfig/device/: Cargo.toml
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: main.rs
crates/agent/: Cargo.toml  example_agent_config.toml
crates/agent/src/: ethernet_virtualization.rs
crates/api/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-db/src/: ib_partition.rs  lib.rs  rack_firmware.rs
crates/api-integration-tests/: Cargo.toml
crates/api-integration-tests/tests/: lib.rs
crates/api-model/: Cargo.toml
crates/api-test-helper/: Cargo.toml
crates/api/src/: api.rs  errors.rs  setup.rs
crates/bmc-mock/: Cargo.toml
crates/bmc-mock/src/: bmc_state.rs  combined_server.rs  combined_service.rs  http.rs  lib.rs  machine_info.rs  main.rs  middleware_router.rs  mock_machine_router.rs  tar_router.rs  tls.rs
crates/bmc-vendor/: Cargo.toml
crates/certs/: Cargo.toml
crates/config-version/: Cargo.toml
crates/dhcp/: cbindgen.toml
crates/dhcp-server/: Cargo.toml  Makefile.toml
crates/dhcp-server/conf/: conf.yaml
crates/dhcp-server/src/: main.rs
crates/dns/: Cargo.toml
crates/dns-record/: Cargo.toml
crates/dpf/: Cargo.toml  Makefile.toml
crates/dpu-agent-utils/: Cargo.toml
crates/dpu-otel-agent/: Cargo.toml
crates/dpu-remediation/: Cargo.toml
crates/dsx-exchange-consumer/: Cargo.toml
crates/health/: Cargo.toml
crates/health-report/: Cargo.toml
crates/health/example/: config.bmc-mock.toml  config.example.toml
crates/host-support/: Cargo.toml
crates/http-connector/: Cargo.toml
crates/libnmxm/: Cargo.toml
crates/log-parser/: Cargo.toml
crates/logfmt/: Cargo.toml
crates/machine-a-tron/: Cargo.toml
crates/machine-a-tron/config/: mac.toml  mat.toml
crates/machine-a-tron/src/: bmc_mock_wrapper.rs  dpu_machine.rs  host_machine.rs  machine_state_machine.rs  main.rs  tabs.rs  tui.rs
crates/machine-validation/: Cargo.toml
crates/machine-validation/config/: 7z23cto1ww.yaml  default.yaml  nvidia.yaml  test.yaml
crates/macros/: Cargo.toml
crates/measured-boot/: Cargo.toml
crates/metrics-endpoint/: Cargo.toml
crates/mlxconfig-device/: Cargo.toml
crates/mlxconfig-embedded/: Cargo.toml
crates/mlxconfig-embedded/src/: main.rs
crates/mlxconfig-embedded/src/cmd/: args.rs  cmds.rs
crates/mlxconfig-firmware/: Cargo.toml  README.md
crates/mlxconfig-firmware/src/: config.rs  credentials.rs  error.rs  flasher.rs  reset.rs  source.rs
crates/mlxconfig-firmware/tests/: test_config.rs  test_credentials.rs  test_source.rs
crates/mlxconfig-lockdown/: Cargo.toml
crates/mlxconfig-lockdown/src/: runner.rs
crates/mlxconfig-profile/: Cargo.toml
crates/mlxconfig-registry/: Cargo.toml
crates/mlxconfig-runner/: Cargo.toml
crates/mlxconfig-runner/src/: applier.rs  lib.rs
crates/mlxconfig-variables/: Cargo.toml
crates/mockdpa/: Cargo.toml
crates/mqttea/: Cargo.toml
crates/mqttea-example/: Cargo.toml
crates/network/: Cargo.toml
crates/nras/: Cargo.toml
crates/prometheus-text-parser/: Cargo.toml
crates/prost-builder/: Cargo.toml
crates/pxe/: Cargo.toml
crates/rpc/: Cargo.toml
crates/rpc/proto/: forge.proto
crates/sbom/: Cargo.toml
crates/scout/: Cargo.toml
crates/secrets/: Cargo.toml
crates/site-explorer/src/: lib.rs
crates/spancounter/: Cargo.toml
crates/sqlx-testing/: Cargo.toml
crates/ssh/: Cargo.toml
crates/ssh-console/: Cargo.toml
crates/ssh-console-fuzz/: Cargo.toml
crates/ssh-console-mock-api-server/: Cargo.toml
crates/ssh-console/tests/: main.rs
crates/systemd/: Cargo.toml
crates/tls/: Cargo.toml
crates/tonic-client-wrapper/: Cargo.toml
crates/utils/: Cargo.toml
crates/uuid/: Cargo.toml
crates/version/: Cargo.toml
crates/xtask/: Cargo.toml
deploy/: kustomization.yaml
deploy/carbide-base/api/: api-service.yaml  certificate.yaml  deployment.yaml  kustomization.yaml  metrics-service.yaml  migration.yaml  profiler-service.yaml  role.yaml  rolebinding.yaml  service-account.yaml
deploy/carbide-base/dhcp/: certificate.yaml  deployment.yaml  kustomization.yaml  metrics-service.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
deploy/carbide-base/dns/: certificate.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml  statefulset.yaml
deploy/carbide-base/dsx-exchange-consumer/: certificate.yaml  deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
deploy/carbide-base/hardware-health/: certificate.yaml  deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
deploy/carbide-base/ntp/: kustomization.yaml  service.yaml  statefulset.yaml
deploy/carbide-base/pxe/: certificate.yaml  deployment.yaml  kustomization.yaml  metrics-service.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
deploy/carbide-base/ssh-console-rs/: certificate.yaml  deployment.yaml  role.yaml  (+5 more)
deploy/carbide-unbound-base/: deployment.yaml  kustomization.yaml  service.yaml
deploy/forge-system/: external-services.yaml  kustomization.yaml  namespace.yaml
dev/: envoy.yaml
dev/docker-env/: carbide-api-config.toml  carbide-dns-config.toml  mat.toml
dev/mac-local-dev/: carbide-api-config.toml  set-env.sh
dev/webdev-env/: carbide-api-config.toml  run-env.sh
docs/api_source/: carbide-rest-openapi-0.2.85.yaml
include/: Makefile-bootstrap.toml  Makefile-docker-compose.toml
lints/carbide-lints/: Cargo.toml
pxe/common_files/: check-scout-updates.sh
(+69 files in other folders)
