#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-mlxconfig-device"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "mlxconfig_device"

[dependencies]
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { features = ["derive"], workspace = true }
tokio = { features = ["full"], workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
quick-xml = { features = ["serialize"], workspace = true }
prettytable-rs = { workspace = true }
regex = { workspace = true }
chrono = { features = ["serde"], workspace = true }
hostname = { workspace = true }
mac_address = { features = ["serde"], workspace = true }
carbide-rpc = { path = "../rpc" }
prost-types = { workspace = true }
carbide-uuid = { path = "../uuid" }

[dev-dependencies]
tokio-test = { workspace = true }
