[package]
name = "carbide-mlxconfig-firmware"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Firmware management for Mellanox NICs, including flash, verify, and reset operations."

[lib]
name = "mlxconfig_firmware"

[dependencies]
carbide-mlxconfig-runner = { path = "../mlxconfig-runner" }
carbide-mlxconfig-lockdown = { path = "../mlxconfig-lockdown" }
carbide-mlxconfig-device = { path = "../mlxconfig-device" }

base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { features = ["rustls-tls"], workspace = true }
async-ssh2-tokio = { workspace = true }
serde = { features = ["derive"], workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
