#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-mlxconfig-lockdown"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A Rust crate for managing Mellanox NIC hardware access locks."

[lib]
name = "mlxconfig_lockdown"

[dependencies]
clap = { features = ["derive"], workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { features = ["serde"], workspace = true }

carbide-rpc = { path = "../rpc" }

[dev-dependencies]
tempfile = { workspace = true }
