#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-mlxconfig-runner"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pulls together the mlxconfig-{registry,variables} crates to safely execute mlxconfig commands."

[lib]
name = "mlxconfig_runner"

[dependencies]
carbide-mlxconfig-device = { path = "../mlxconfig-device" }
carbide-mlxconfig-variables = { path = "../mlxconfig-variables" }
carbide-rpc = { path = "../rpc" }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { features = ["v4"], workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
backon = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
