#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "tonic-client-wrapper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["codegen"]
codegen = [
  "dep:proc-macro2",
  "dep:tonic-prost-build",
  "dep:quote",
  "dep:syn",
  "dep:prettyplease",
  "dep:heck",
  "dep:prost-types",
  "dep:lazy_static",
]

[dependencies]
thiserror = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
proc-macro2 = { optional = true, workspace = true }
tonic-prost-build = { optional = true, workspace = true }
quote = { optional = true, workspace = true }
syn = { optional = true, workspace = true }
prettyplease = { optional = true, workspace = true }
heck = { optional = true, workspace = true }
prost-types = { optional = true, workspace = true }
lazy_static = { optional = true, workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }

[lints]
workspace = true
